<resources>
    <string name="app_name">JoyTrip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="word_share_btn">发表分享</string>
    <string name="share_title">分享主题</string>
    <string name="share_content">分享内容</string>
    <string name="share">分享</string>

    <string name="mine_fragment_mypublished">我的发布</string>
    <string name="mine_fragment_myfollowed">我的加入</string>
    <string name="mine_fragment_mycollection">我的收藏</string>
    <string name="mine_fragment_myfriends">我的好友</string>
    <string name="mine_fragment_mynotification">通知</string>
    <string name="pic_word_share">图文分享</string>
    <string name="video_share">视频分享</string>
    <string name="publish_event">发布</string>
    <string name="user_information_activity_portrait">头像</string>
    <string name="user_information_activity_nickname">昵称</string>
    <string name="user_information_activity_userid">用户ID</string>
    <string name="user_information_activity_phonenumber">电话号码</string>
    <string name="user_information_activity_gender">性别</string>
    <string name="user_information_activity_email">邮箱</string>
    <string name="user_information_activity_password">密码管理</string>
    <string name="user_information_activity_logout">注销登录</string>
</resources>
