<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.WordSharePublish">


    <EditText
        android:id="@+id/share_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/share_title"
        android:background="@drawable/edit_shape"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/share_content_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/share_content"
        android:background="@drawable/edit_shape"
        android:layout_margin="10dp"
        android:scrollbars="vertical"
        android:gravity="top"
        android:singleLine="false"
        android:minLines="3"
        android:maxLines="3"
        android:lineSpacingExtra="3dp" />

    <Button
        android:id="@+id/share_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share" />

</LinearLayout>