<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPageGrayBackground"
    android:orientation="vertical"
    tools:context=".activity.UserInformationActivity">

    <RelativeLayout
        android:id="@+id/layout_portrait"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorMineFragmentPureWhite"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/user_information_activity_portrait"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/information_activity_portrait"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="50dp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/right_arrow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_nickname"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorMineFragmentPureWhite"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/user_information_activity_nickname"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/right_arrow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_userid"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorMineFragmentPureWhite"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/user_information_activity_userid"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:textSize="25sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorMineFragmentPureWhite"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/user_information_activity_phonenumber"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/right_arrow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_gender"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorMineFragmentPureWhite"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/user_information_activity_gender"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/right_arrow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorMineFragmentPureWhite"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/user_information_activity_email"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/right_arrow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorMineFragmentPureWhite"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/user_information_activity_password"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/right_arrow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorMineFragmentPureWhite"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/user_information_activity_logout"
            android:textSize="25sp" />

    </RelativeLayout>

</LinearLayout>